# Mein-CLI11-Projekt

./: CMakeLists.txt  README.md  eintrag.jason  eintrag.json  entrag.json  main.cpp  test  testlauf
src/: main.cc
